# mdsplib

./: .gitignore  .travis.yml  CMakeLists.txt  HISTORY  LICENSE  Makefile  README  README.MDSP  README.md  appveyor.yml  metar.h
.github/workflows/: linux-ci.yml  msbuild.yml  windows-ci.yml
include/: metar.h
src/: antoi.c  charcmp.c  dcdmetar.c  dcdmtrmk.c  decode_metar.c  decode_metar_remark.c  drvmetar.c  fracpart.c  local.h  metar_structs.h  metar_test.c  print_decoded_metar.c  prtdmetr.c  stspack2.c  stspack3.c
